fix: refine hero height on mobile screen

--- a/css/style.css
+++ b/css/style.css
@@ -140,4 +140,7 @@ body {
     }
 
     /* tulis semua kode css untuk menangani elemen ketika di layar mobile... */
+    .hero {
+        min-height: 80vh;
+    }
 }
